--- a/.github/workflows/msdo.yml
+++ b/.github/workflows/msdo.yml
@@ -29,9 +29,15 @@ jobs:
         with:
           persist-credentials: false
       - name: Run Microsoft Security DevOps scanner
+        id: scan
         uses: microsoft/security-devops-action@08976cb623803b1b36d7112d4ff9f59eae704de0 # v1.12.0
-        id: msdo
+      - name: "Upload artifact"
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+        with:
+          name: MSDO SARIF file
+          path: ${{ steps.scan.outputs.sarifFile }}
+          retention-days: 5
       - name: Upload MSDO scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@192325c86100d080feab897ff886c34abd4c83a3 # v3.29.5
         with:
-          sarif_file: ${{ steps.msdo.outputs.sarifFile }}
+          sarif_file: ${{ steps.scan.outputs.sarifFile }}
